# rust-easyadmin-framework

./: Cargo.toml  LICENSE-MIT  README.md
cli/: Cargo.toml  main.rs
lib/: Cargo.toml
lib/src/: lib.rs
skeleton/: Cargo.toml  bootstrap.rs  controllers.rs
skeleton/controllers/admin/: home_controller.rs
skeleton/controllers/auth/: login_controller.rs  register_controller.rs
skeleton/controllers/frontend/: home_controller.rs
skeleton/views/admin/: dashboard.tpl
skeleton/views/auth/: login.tpl  register.tpl
skeleton/views/frontend/: index.rhb
src/: main.rs
src/lib/: Cargo.toml  Rocket.toml  bootstrap.rs
src/lib/controllers/: mod.rs
src/lib/controllers/admin/: home_controller.rs
src/lib/controllers/frontend/: home_controller.rs
src/lib/utils/: view.rs
src/lib/views/admin/: index.tpl
src/lib/views/frontend/: index  index.tpl
