[package]
name = "easyadmin_cli"
version = "0.1.0"
authors = ["Eden Reich <eden.reich@gmail.com>"]
edition = "2018"
description = "A cli tool for easyadmin written in rust."
documentation = ""
homepage = ""
repository = "https://github.com/edenreich/rust-easyadmin"
readme = "../README.md"
keywords = ["rocket", "web", "framework", "admin", "admin-panel", "web-framework", "rust"]
license = "MIT"

[dependencies]
termion = "1.5.5"
clap = { version = "3.0.0-beta.2", features = [ "color" ] }
diesel_cli = { version = "1.4.1", features = [ "mysql" ] }

[[bin]]
name = "easyadmin"
path = "main.rs"
