[package]
name = "easyadmin"
version = "0.1.0"
authors = ["Default Name <email>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
handlebars = { version = "3.5.0", features = ["dir_source"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.3" }
diesel_migrations = "1.3"
log = "0.4"
